[package]
name = "mlua-tree-sitter"
version = "0.1.0"
authors = ["Douglas Creager <dcreager@dcreager.net>"]
edition = "2021"
repository = "https://github.com/dcreager/mlua-tree-sitter"
license = "MIT"
links = "ltreesitter"
description = """
Provides access to tree-sitter parse trees in Lua code managed by the mlua crate.
"""

[package.metadata.docs.rs]
features = ["mlua/lua54", "mlua/vendored"]

[patch.crates-io]
# TODO: Revert to a regular versioned dependency once tree-sitter#2773 has been
# merged.
tree-sitter = { git="https://github.com/dcreager/tree-sitter", branch="rust-linking" }

[dependencies]
mlua = { version = "0.9" }
mlua-sys = { version = "0.3" }
tree-sitter = { version = "0.20" }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
anyhow = { version = "1.0" }
tree-sitter-python = { version = "0.20" }
